# CapsWriter-Offline

./: .gitignore  config.py  readme.md
client/: config.toml  pyproject.toml  run.py  start_client.py
client/assets/: hot-zh.txt  keywords.txt
client/src/: config.py  core_client.py  main.py
client/src/comm/: __init__.py  ws_check.py  ws_recv.py
client/src/mtypes/: __init__.py  cosmic.py  status.py
client/src/transcribe/: __init__.py  transcribe.py
client/src/utils/: __init__.py  adjust_srt.py  audio_file.py  client_adjust_srt.py  client_shortcut_handler.py  client_transcribe.py  empty_working_set.py  hot_word_kwd.py  hot_word_replacer.py  hot_word_replacer_en.py  hot_word_replacer_rule.py  hot_word_replacer_zh.py  hot_word_updater.py  input_handler.py  load_config.py  markdown_file.py  output_handler.py  show_tips.py  srt_from_txt.py  stream.py  strip_punc.py
client/wait_for_resolve/: adjust_space.py  chinese_itn.py  format_tools.py  test_adjust_space.py  test_chinese_itn.py
server/: README.md  config.toml  pyproject.toml  run.py
server/src/: config.py  main.py
server/src/asr/: __init__.py  loaders.py  recognizer.py
server/src/comm/: __init__.py  ws_recv.py  ws_send.py
server/src/mtypes/: __init__.py  cosmic.py  model.py  status.py  task.py
server/src/net/: __init__.py  ws.py
server/src/recognize/: __init__.py  check_model.py  init_recognizer.py  load_model.py  recognize.py  recognizer.py
server/src/types/: cosmic.py  model.py  my_status.py  status.py  task.py
server/src/utils/: __init__.py  adjust_space.py  check_model.py  format_tools.py  (+2 more)
(+2 files in other folders)
