[project]
name = "CapsWriter-Offline-Server"
version = "0.1.0"
description = "CapsWriter-Offline的服务端"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich==14.0.0",
    "websockets==13.0.0",
    "numpy==2.2.5",
    "typeguard==2.13.3",
    "sherpa_onnx==1.11.4",
    "kaldi-native-fbank==1.21.1",
    "jieba==0.42.1",
    "funasr-onnx>=0.2.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyinstaller>=6.13.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = ["unit: 标记单元测试", "integration: 标记集成测试"]
